fix: tests and product state endpoints

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,2 @@
 /errors/client-errors/not-founds/resource-not-found=Batata
+/errors/client-errors/product/invalid-state='{}' is not a valid product state
